# ocaml-mcp-sdk

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  JANE_STREET_SETUP.md  LICENSE  MCP_EFFECT_ANALYSIS.md  MODAL_INTEGRATION_COMPLETE.md  MODE_COMPILER_SUCCESS.md  MODE_INTEGRATION_ROADMAP.md  MODE_PATCHES.md  PROJECT_STRUCTURE.md  README.md  SDK_COMPARISON.md  SIGNAL_MCP_DESIGN.md  SIGNAL_MCP_IMPLEMENTATION.md  STANDARD_OCAML_VERSION.md  dune-project  justfile  ocaml-mcp-sdk.opam  test_compile.ml  test_structure.sh
.flox/: env.json
.flox/env/: manifest.toml
.just/: settings.just
.topos/: README.md
.topos/schema/2025-03-26/: schema.json
docs/: ADVANCED.md  API.md  GETTING_STARTED.md
examples/: client_example.ml  dune  server_example.ml
lib/: dune  mcp_client.ml  mcp_effect.ml  mcp_effects.ml  mcp_full_demo.ml  mcp_requests.ml  mcp_server.ml  mcp_server_annotated.ml  mcp_types.ml  modes.ml  protocol_handler.ml  protocol_handler_annotated.ml  signal_effects_demo.ml  signal_effects_simple.ml  signal_handlers.ml  signal_mcp_effects.ml  signal_mcp_minimal.ml  signal_mcp_server.ml  signal_ops.ml  signal_proper_effects.ml  signal_standalone_effects.ml  stdio_transport.ml  stdio_transport_annotated.ml  test_simple.ml
